fix: add 100svh fallback to fix footer display on iPhone Safari

--- a/src/app/index.module.scss
+++ b/src/app/index.module.scss
@@ -1,13 +1,8 @@
-.body {
-  overflow: hidden;
-}
-
 .layout {
   display: flex;
   flex-direction: column;
   height: 100vh;
-  overflow: hidden;
-  min-height: 100dvh;
+  height: 100svh; /* Safari device - Small Viewport Height */
 
   .main {
     display: flex;
