--- a/src/container/About/index.module.scss
+++ b/src/container/About/index.module.scss
@@ -5,6 +5,7 @@
   overflow: scroll;
   margin-top: 8px;
   padding: 0;
+  width: 100%;
 
   .title {
     padding-bottom: 16px 0;
